# FL_LLM_Med

./: Comprehensive_Clinical_Entity_and_Modifier_Guideline.docx  README.md  convert_re.sh  dataset_analyzer.sh  evaluate.sh  fix.sh  iid_convert_train.sh  pyproject.toml  simulator.py  train.sh  train_bert.sh  train_mix.sh  train_re.sh
conf/: global.yaml
conf/llm/: Meta-Llama-3-1B.yaml  Qwen3-4B.yaml
conf/medical_mix/: Meta-Llama-3-8B.yaml
conf/medical_re/: DeepSeek-R1-Distill-Llama-8B.yaml
data/: NER_main_train_new.json
distributed_LLM_learning_simulator/: README.md  convert_bio.sh  iid_json_convert_train.sh  json_converter.py  pyproject.toml  re_evaluate.sh
distributed_LLM_learning_simulator/conf/llm/: DeepSeek-R1-Distill-Llama-8B.yaml  Meta-Llama-3-8B.yaml
distributed_LLM_learning_simulator/conf/medical_mix/: common.yaml
distributed_LLM_learning_simulator/prompt/: medical.txt  medical_evaluation_1.txt  medical_html.txt  medical_html_evaluation.txt  medical_mix_1.txt  medical_modifier_evaluation.txt
distributed_LLM_learning_simulator/src/: datapipeline_mixin.py
prompt/: medical_evaluation.txt  medical_mix.txt  medical_mix_evaluation.txt  medical_modifier.txt
src/: datapipeline_mixin.py
src/algorithm/: __init__.py
src/command/: NER_evaluator.py  iob_distribution_analyzer.py  json_iid_split.py  medical_re_csv_parse.py  util.py  vllm_generator.py
src/method/: __init__.py
src/preprocess/: __init__.py
src/server/: common.py  sft.py
src/sft/: __init__.py  dp_trainer.py  pruned_LoRA_trainer.py
src/worker/: __init__.py  common.py  sft.py
(+28 files in other folders)
