[project]
name = "distributed_LLM_learning_simulator"
version = "1.0"
requires-python = ">=3.12"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
  { name = "cyy", email = "cyyever@outlook.com" },
]
license = { text = "BSD License" }
classifiers = ["Programming Language :: Python"]
dependencies = [
  "bitsandbytes",
  "cyy_huggingface_toolbox@git+https://github.com/cyyever/huggingface_toolbox.git",
  "cyy_preprocessing_pipeline@git+https://github.com/cyyever/preprocessing_pipeline.git@main",
  "distributed_learning_simulation@git+https://github.com/cyyever/distributed_learning_simulation_lib.git",
  "ner_metrics",
  "nervaluate",
  "peft",
  "transformers",
  "torch==2.10",
  "vllm",
  "trl",
]

[project.urls]
Repository = "https://github.com/cyyever/distributed_LLM_learning_simulator"

[build-system]
requires = ["setuptools >= 63.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
  # pylint
  "PL",
  # numpy
  "NPY",
  # ruff
  "RUF",
]
ignore = ["F403", "E402", "PLR2004", "E501"]

[tool.setuptools.package-dir]
"distributed_LLM_learning_simulator.conf" = "./conf"
"distributed_LLM_learning_simulator.method" = "./src/method"
